Increased body max size

--- a/image/config/nginx.conf
+++ b/image/config/nginx.conf
@@ -23,6 +23,9 @@ http {
 	types_hash_max_size 2048;
 	# server_tokens off;
 
+	# set client body size to 2M #
+	client_max_body_size 5M;
+
 	# server_names_hash_bucket_size 64;
 	# server_name_in_redirect off;
 
