--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -1,5 +1,5 @@
 FROM phusion/baseimage:0.9.15
-MAINTAINER Mike Petersen <support@odania-it.com>
+MAINTAINER Mike Petersen <mike@odania-it.de>
 
 ENV HOME /root
 RUN mkdir /build
