Added cache control public header

--- a/image/config/webapp.conf
+++ b/image/config/webapp.conf
@@ -20,5 +20,6 @@ server {
 		root /home/app/webapp/public;
 		gzip_static on; # to serve pre-gzipped version
 		expires max;
+		add_header Cache-Control "public";
 	}
 }
