--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -1,8 +1,7 @@
-FROM phusion/baseimage:latest
+FROM odaniait/docker-base:latest
 MAINTAINER Mike Petersen <mike@odania-it.de>
 
 ENV HOME /root
 RUN mkdir /build
 ADD . /build
 RUN /build/install.sh
-CMD ["/sbin/my_init"]
